--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,35 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <style type="text/css">
-    .navbar .navbar-brand {
-    padding-top: 5px;
-    }
-    .navbar .navbar-brand img {
-    height: 80px;
-    width: 80px;
-    }
-    .navbar-text {
-    padding-top: 5px;
-    color: #ffcc33 !important;
-    text-align: center;
-    }
-    </style>
+    <%- include ../partials/stylesheets.ejs %>
   </head>
   <body>
     
-    <nav class="navbar navbar-default" style="min-height: 90px; background-color: #330033">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">
-            <img alt="sfsu-logo" src="logo.png">
-          </a>
-          <h1 class="navbar-text">Gator Ally</h1>
-        </div>
-      </div>
-    </nav>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <%- include ../partials/navbar.ejs %>
+
+
+
+
+    <%- include ../partials/scripts.ejs %>
   </body>
 </html>
