--- a/views/partials/stylesheets.ejs
+++ b/views/partials/stylesheets.ejs
@@ -1,2 +1,3 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
 <link rel="stylesheet" href="stylesheets/navbar.css">
