--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
 	<form class="col-6 mx-0 px-0" method="get">
 		<br>
 		<div class="form-group row">
-			<button class="rounded-circle border border-success offset-1">.       1.   </button>
+			<button class="rounded-circle border border-dark offset-1">.       1.   </button>
 			<div class="mx-1"></div>
 			<div class="col-4">
 				<select name="term" class="custom-select" id="term" onchange="unlockSession();">
@@ -19,7 +19,7 @@
 				<div class="valid-feedback"></div>
 			</div>
 			<div class="mx-4"></div>
-			<button class="rounded-circle border border-danger">.       2.   </button>
+			<button class="rounded-circle border border-dark">.       2.   </button>
 			<div class="mx-1"></div>
 			<div class="col-4">
 				<select name="session" class="custom-select" id="session" onchange="unlockSearch();" disabled>
@@ -30,7 +30,7 @@
 			</div>
 		</div>
 		<div class="form-group row">
-			<button class="rounded-circle border border-danger offset-1">.       3.   </button>
+			<button class="rounded-circle border border-dark offset-1">.       3.   </button>
 			<div class="mx-1"></div>
 			<div class="col-3 pr-0">
 				<select name="department" class="custom-select" id="department" disabled>
@@ -53,6 +53,7 @@
 			unlockSession.unlocked = true;
 			document.getElementById('session').disabled = false;
 			document.getElementById('directions').innerHTML = 'Next, select a session.'
+
 		}
 	}
 	function unlockSearch() {
