--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -43,6 +43,7 @@
 			</div>
 			<input name="search" type="text" class="form-control col-6" id="search" placeholder="Search for classes" value="" disabled>
 			<input type="submit" name="submit" value="submit" style="display: none"/>
+			<button onclick="search()">Search</button>
 		</div>
 	</form>
 </div>
