--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -46,7 +46,45 @@
 			<button class="rounded-circle border border-dark offset-1" onclick="search()">Search</button>
 		</div>
 	</form>
+	<!-- Trigger the Modal -->
+	<img id="roadmap" src="CS_Roadmap-1.png" alt="CS Roadmap" style="width:100%;max-width:300px">
+
+	<!-- The Modal -->
+	<div id="modal" class="modal">
+
+		<!-- The Close Button -->
+		<span class="close">&times;</span>
+
+		<!-- Modal Content (The Image) -->
+		<img class="modal-content" id="CS_RM">
+
+		<!-- Modal Caption (Image Text) -->
+		<div id="caption"></div>
+	</div>
 </div>
+
+<script type="text/javascript">
+// Get the modal
+var modal = document.getElementById('modal');
+
+// Get the image and insert it inside the modal - use its "alt" text as a caption
+var img = document.getElementById('roadmap');
+var modalImg = document.getElementById("CS_RM");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+modal.style.display = "block";
+modalImg.src = this.src;
+captionText.innerHTML = this.alt;
+}
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}
+</script>
 <script type="text/javascript">
 	function unlockSession() {
 		if (typeof unlockSession.unlocked == 'undefined') {
